syntax="proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_create_course.proto";
import "rpc_get_course.proto";


option go_package = "github.com/okoroemeka/la-candela-backend-rpc/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "La Candela Backend RPC";
    version: "1.0.0";
    description: "La Candela Backend RPC";
    contact: {
      name: "Emeka Okoro";
      email: "okoroemeka056@gmail.com";
    };
  };
};

service LaCandelaBackendRPC{
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
    description: "Create a new user";
    summary: "Create a new user";
    };
  }
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse){
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Login existing user";
      summary: "login user"
    };
  }
  rpc CreateCourse(CreateCourseRequest) returns (CreateCourseResponse){
    option(google.api.http) = {
      post:"/v1/create_course"
      body: "*"
    };
  }
  rpc GetCourse(GetCourseRequest) returns (GetCourseResponse){
    option(google.api.http) = {
      post:"/v1/get_course"
      body: "*"
    };
  }
}